--- a/index.html
+++ b/index.html
@@ -1,36 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Article preview component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Frontend Mentor | Article preview component</title>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <div class="outer">
+      <div class="inner">
+        <img src="./images/drawers.jpg" alt="drawers image" class="inner-img" />
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+        <div class="inner-main">
+          <div class="content">
+            <h1>
+              Shift the overall look and feel by adding these wonderful touches
+              to furniture in your home
+            </h1>
+            <p>
+              Ever been in a room and felt like something was missing? Perhaps
+              it felt slightly bare and uninviting. I’ve got some simple tips to
+              help you make any room feel complete.
+            </p>
+          </div>
+          <div class="inner-footer" id="footer">
+            <div class="feedback" id="feedback">
+              <img
+                class="thumbnail"
+                src="./images/avatar-michelle.jpg"
+                alt="user image"
+              />
+              <div class="caption">
+                <h4>Michelle Appleton</h4>
+                <p>28 Jun 2020</p>
+              </div>
+            </div>
 
-  Shift the overall look and feel by adding these wonderful 
-  touches to furniture in your home
+            <div class="social" id="social">
+              
+              <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13"><path fill="#6E8098" d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/></svg>
+            </div>
+          </div>
+          <div class="social-icons" id="social-icons">
+            <ul>
+              <li><p>SHARE</p></li>
+              <li>
+                <a href="#"><img src="./images/icon-facebook.svg" alt="fb"/>
+              </li>
+              <li>
+              <a href="#"><img src="./images/icon-twitter.svg" alt="tw" /></a>
+              </li>
+              <li>
+                <a href="#"><img src="./images/icon-pinterest.svg" alt="pr"/></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Your Name Here</a>.
+      </div>
+    </div>
 
-  Ever been in a room and felt like something was missing? Perhaps 
-  it felt slightly bare and uninviting. I’ve got some simple tips 
-  to help you make any room feel complete.
+    <script>
+      let social = document.getElementById("social");
+      let footer = document.getElementById("footer");
+      let feedback = document.getElementById("feedback");
+      let socialIcons = document.getElementById("social-icons");
 
-  Michelle Appleton
-  28 Jun 2020
-
-  Share
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      social.addEventListener("click", () => {
+        social.classList.toggle("active");
+        footer.classList.toggle("active");
+        feedback.classList.toggle("active");
+        socialIcons.classList.toggle("active");
+      });
+    </script>
+  </body>
 </html>
