--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
             <ul>
               <li><p>SHARE</p></li>
               <li>
-                <a href="#"><img src="./images/icon-facebook.svg" alt="fb"/>
+                <a href="https://facebook.com/"><img src="./images/icon-facebook.svg" alt="fb"/>
               </li>
               <li>
-              <a href="#"><img src="./images/icon-twitter.svg" alt="tw" /></a>
+              <a href="https://pinterest.com/"><img src="./images/icon-twitter.svg" alt="tw" /></a>
               </li>
               <li>
-                <a href="#"><img src="./images/icon-pinterest.svg" alt="pr"/></a>
+                <a href="https://twitter.com"><img src="./images/icon-pinterest.svg" alt="pr"/></a>
               </li>
             </ul>
           </div>
@@ -79,7 +79,7 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Kiran Sawant</a>.
       </div>
     </div>
 
